--- a/kadai3_hasegawa/css/style.css
+++ b/kadai3_hasegawa/css/style.css
@@ -1,14 +1,18 @@
 @charset "utf-8";
 
+body {
+    background-color: #eeeeee;
+}
+
 .service {
     max-width: 960px;
     margin: 10px auto;
-    background-color: #eeeeee;
 }
 
 h1 {
     color: green;
     text-align: center;
+    padding: 15px 0;
 }
 
 h2 {
@@ -16,7 +20,7 @@ h2 {
 }
 
 p {
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
 
@@ -24,7 +28,7 @@ p {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 0 10px;
     box-sizing: border-box;
 }
 
@@ -34,11 +38,7 @@ p {
 
 .service-title {
     width: 100%;
-    padding-bottom: 10px;
     align-items: center;
-}
-
-.service-title :first-child {
     border-left: 12px solid green;
     padding: 0 10px;
 }
@@ -58,7 +58,9 @@ p {
         flex-direction: column;
     }
 
-    .service-content-img {
+    .service-content-img,
+    .service-content-img img {
         width: 100%;
     }
+
 }
