--- a/kadai4_hasegawa/css/style.css
+++ b/kadai4_hasegawa/css/style.css
@@ -69,6 +69,11 @@ header {
     margin: 0 auto;
 }
 
+.content_large {
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
 /* ABOUT US */
 
 #aboutus {
@@ -77,7 +82,7 @@ header {
     justify-content: space-between;
 }
 
-.aboutous_left {
+.aboutus_left {
     width: 50%;
 }
 
@@ -94,6 +99,7 @@ header {
 
 .aboutus_right img {
     width: 270px;
+    height: auto;
 }
 
 .aboutus_right_large {
@@ -115,6 +121,10 @@ header {
     text-align: center;
 }
 
+.menu_img {
+    position: relative;
+}
+
 .menu_list {
     width: 100%;
     display: flex;
@@ -127,7 +137,7 @@ header {
     font-size: 38px;
     color: #d30202;
     position: absolute;
-    top: 187px;
+    top: 94%;
     left: 11px;
 }
 
@@ -136,10 +146,7 @@ header {
     font-size: 17px;
     line-height: 1.5;
     padding-top: 40px;
-}
-
-.menu_list li {
-    position: relative;
+    text-align: left;
 }
 
 .menu_list li img {
@@ -150,7 +157,7 @@ header {
 
 /* ↓　内　容(gallery)　↓ */
 .content_gallary {
-    width: 100%;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -186,9 +193,14 @@ header {
     border: 4px solid #4f260b;
     background-color: white;
     box-sizing: border-box;
-    padding: 38px 0 25px 16%;
+    padding: 38px 0 25px 0;
     font-size: 23px;
     text-align: left;
+}
+
+.event_list div {
+    width: fit-content;
+    margin: 0 auto;
 }
 
 .event_list p {
@@ -226,6 +238,7 @@ header {
     background-color: white;
     margin: 0 auto;
     padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .info_detail {
@@ -234,10 +247,11 @@ header {
     margin: 0 auto;
     display: flex;
     align-items: start;
+    gap: 55px;
 }
 
 .info_detail img {
-    width: 50%;
+    width: 226px;
 }
 
 .info_detail div {
@@ -245,7 +259,7 @@ header {
     line-height: 2;
 }
 
-footer {
+.copyright {
     margin-top: auto;
     text-align: center;
     padding-bottom: 80px;
@@ -255,9 +269,10 @@ footer {
 /* ページトップ */
 
 #button {
+    max-width: 1920px;
     position: fixed;
     bottom: 20px;
-    right: 10px;
+    right: 0;
 }
 
 #button img {
