課題4PC 再提出

--- a/kadai4_hasegawa/css/reset.css
+++ b/kadai4_hasegawa/css/reset.css
@@ -24,6 +24,7 @@ li {
         "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif; */
     font-family: "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
     font-feature-settings: "palt";
+    scroll-behavior: smooth;
 }
 
 a {
