--- a/kadai4_hasegawa/css/style.css
+++ b/kadai4_hasegawa/css/style.css
@@ -37,6 +37,14 @@ header {
     text-align: center;
 }
 
+/* スマホ版メニュー */
+.sp_nav,
+.sp_btn {
+    display: none;
+}
+
+
+
 /* キャッチコピー */
 
 .copy {
@@ -54,6 +62,10 @@ header {
 .copy_small_ja {
     line-height: 1.65;
     font-size: 23px;
+}
+
+.copy_small_ja_sp {
+    display: none;
 }
 
 .copy_large {
@@ -273,4 +285,186 @@ header {
     bottom: 20px;
     right: 30px;
     width: 125px;
+}
+
+@media screen and (max-width: 1100px) {
+    .pc_nav {
+        display: none;
+    }
+
+    .sp_btn {
+        display: block;
+        height: 23px;
+        position: absolute;
+        right: 25px;
+        top: 20px;
+        cursor: pointer;
+        /* 重なり具合 */
+        z-index: 2;
+    }
+
+    .sp_btn span {
+        display: block;
+        width: 33px;
+        height: 3px;
+        border-radius: 2px;
+        background-color: white;
+        /* 位置の調整 */
+        position: relative;
+        top: 10px;
+        transition: 0.3s;
+    }
+
+    .sp_btn span::before,
+    .sp_btn span::after {
+        content: "";
+        display: block;
+        width: 33px;
+        height: 3px;
+        border-radius: 2px;
+        background-color: white;
+        /* 位置の調整 */
+        position: absolute;
+        transition: 0.3s;
+    }
+
+    .sp_btn span::before {
+        bottom: 10px;
+    }
+
+    .sp_btn span::after {
+        top: 10px;
+    }
+
+    /* バツ印 */
+    .sp_btn.open span {
+        background: transparent;
+    }
+
+    .sp_btn.open span::before {
+        bottom: 0;
+        transform: rotate(45deg);
+    }
+
+    .sp_btn.open span::after {
+        top: 0;
+        transform: rotate(-45deg);
+    }
+
+    /* メニューの見た目 */
+    .sp_nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.8);
+        /* 重なり具合 */
+        z-index: 1;
+    }
+
+    .sp_nav li {
+        color: white;
+        font-size: 18px;
+        font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ",
+            "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif;
+        font-weight: bolder;
+    }
+
+    .sp_nav ul {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .copy_large {
+        font-size: 65px;
+    }
+
+    .aboutus_right_large {
+        font-size: 36px;
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+    h1 {
+        position: absolute;
+        top: 10px;
+    }
+
+    /* キャッチコピー */
+
+    .copy {
+        margin-top: 41px;
+    }
+
+    .copy_small_en {
+        font-size: 17px;
+    }
+
+    .copy_large {
+        font-size: 38px;
+        letter-spacing: 0.02em;
+    }
+
+    .copy_small_ja {
+        display: none;
+    }
+
+    .copy_small_ja_sp {
+        display: block;
+        font-size: 16px;
+        line-height: 1.9;
+    }
+
+    /* ABOUT US */
+
+    #aboutus {
+        margin-top: 60px;
+        flex-direction: column;
+        /* 縦並びにする */
+
+        padding: 0;
+    }
+
+    .aboutus_left {
+        margin-top: 13px;
+        width: 100%;
+        order: 2;
+    }
+
+    .aboutus_left img {
+        width: 100%;
+        border-bottom-right-radius: 0;
+    }
+
+    .aboutus_right {
+        display: contents;
+        /*スマホサイズではボックスを生成しない */
+    }
+
+    .aboutus_right h2 {
+        order: 1;
+        text-align: center;
+    }
+
+    .aboutus_right_large {
+        margin-top: 35px;
+        padding: 0 20px;
+        line-height: 1.3;
+        order: 3;
+    }
+
+    .aboutus_right_small {
+        line-height: 1.8;
+        margin-top: 20px;
+        padding: 0 20px;
+        text-align: justify;
+        order: 4;
+    }
+
 }
